Fix overflow on Dashboard and Discover Page

--- a/frontend/src/assets/stylesheets/discover.css
+++ b/frontend/src/assets/stylesheets/discover.css
@@ -1,3 +1,10 @@
+.discovery-wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .discovery-container {
   width: 100%;
   height: calc(100vh - 175px);
